update/fix script name

--- a/docs/01.usage.md
+++ b/docs/01.usage.md
@@ -1,12 +1,17 @@
 # Usage
 
+```bash
+# help
+pycantoether --help
+```
+
 ## Example
 
 Run
 
 ```bash
 # gs_usb
-./server.py run \
+pycantoether run \
     --interface gs_usb \
     --srv-interface yachtd_raw \
     --channel "" \
@@ -14,7 +19,7 @@ Run
     --log-level INFO 
 
 # slcan
-./server.py run \
+pycantoether run \
     --interface slcan \
     --srv-interface yachtd_raw \
     --channel "/dev/tty.usbmodem1101" \
